--- a/style.css
+++ b/style.css
@@ -77,6 +77,38 @@ h4.dis span {
   text-decoration: line-through #ea3201;
 }
 
+#lessons{
+  height: 100vh;
+  width:100%;
+  background-color: rgb(3, 12, 103);
+}
+.container-1{
+  position: absolute;
+  left: 0;
+  right: 0;
+  background:  url('./img/bg.png') no-repeat fixed center center, linear-gradient(rgb(3, 12, 103), #a5cc82) fixed;
+}
+.welcome{
+  margin-top: -100px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 2.7em;
+}
+.container-2{
+    width: 75%;
+    height: 25%;
+    margin: auto;
+    position: absolute;
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    left: 0;
+    right: 0;
+    color: white;
+    bottom: 0;
+    background-color: rgb(3, 12, 103);
+    box-shadow: inset -10px -10px 10px 20px rgb(3, 12, 103) !important;
+}
+
 .card {
   background-color: darkblue;
   width: 300px;
