--- a/style.css
+++ b/style.css
@@ -80,22 +80,35 @@ h4.dis span {
 #lessons{
   height: 100vh;
   width:100%;
-  background-color: rgb(3, 12, 103);
+  background-color: rgb(4, 15, 108);
 }
 .container-1{
   position: absolute;
   left: 0;
   right: 0;
-  background:  url('./img/bg.png') no-repeat fixed center center, linear-gradient(rgb(3, 12, 103), #a5cc82) fixed;
+  box-shadow: inset -10px -20px 10px 20px rgb(4, 15, 108) !important;
+  background:  url('./img/bg.png') no-repeat fixed center center, linear-gradient(rgb(3, 12, 103), rgb(4,15,108)) fixed;
 }
 .welcome{
   margin-top: -100px;
   font-family: 'Poppins', sans-serif;
   font-size: 2.7em;
 }
+.org{
+  
+color:#F20004;
+
+font-family: 'Poppins', sans-serif;
+font-size: 48px;
+font-weight: 400;
+line-height: 21px;
+letter-spacing: 0px;
+text-align: left;
+
+}
 .container-2{
     width: 75%;
-    height: 25%;
+    height: 20%;
     margin: auto;
     position: absolute;
     display: inline-block;
@@ -105,8 +118,7 @@ h4.dis span {
     right: 0;
     color: white;
     bottom: 0;
-    background-color: rgb(3, 12, 103);
-    box-shadow: inset -10px -10px 10px 20px rgb(3, 12, 103) !important;
+    background-color: rgb(4, 15, 108);
 }
 
 .card {
