--- a/style.css
+++ b/style.css
@@ -99,9 +99,9 @@ h4.dis span {
 color:#F20004;
 
 font-family: 'Poppins', sans-serif;
-font-size: 48px;
+font-size: 2.4em;
 font-weight: 400;
-line-height: 21px;
+line-height: 15px;
 letter-spacing: 0px;
 text-align: left;
 
