--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ h4.dis span {
   margin-top: -100px;
   font-family: 'Poppins', sans-serif;
   font-size: 2.7em;
+  margin-left: -50px;
 }
 .fader{
   position: absolute;
@@ -99,21 +100,31 @@ h4.dis span {
   border: none;
   box-shadow: inset -10px -20px 10px 20px rgb(4, 15, 108) !important;
 }
+.infopane{
+  width:350px;
+  margin: auto;
+  text-align: left;
+  font-size: 0.6em;
+}
+.btn-gro-danger{
+  background-color: #F20004 !important;
+  color: white !important;
+}
 .org{
-  
+  margin-left: -50px;
 color:#F20004;
 
 font-family: 'Poppins', sans-serif;
-font-size: 2.4em;
+font-size: 2.4rem;
 font-weight: 400;
-line-height: 15px;
+line-height: 24px;
 letter-spacing: 0px;
 text-align: left;
 
 }
 .container-2{
-    width: 75%;
-    height: 20%;
+    width: 100% !important;
+    height: 25%;
     margin: auto;
     position: absolute;
     display: inline-block;
