--- a/style.css
+++ b/style.css
@@ -84,8 +84,18 @@ h4.dis span {
   position: absolute;
   left: 0;
   right: 0;
+  box-shadow: inset -10px -20px 10px 20px rgb(4, 15, 108) !important;
   background:  url('./img/bg.png') no-repeat fixed center center, linear-gradient(rgb(3, 12, 103), rgb(4,15,108)) fixed;
 }
+.img-container{
+  margin: auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+  box-shadow: inset -10px -20px 10px 20px rgb(4, 15, 108) !important;
+  background:  url('./img/bg.png') no-repeat fixed center center, linear-gradient(rgb(3, 12, 103), rgb(4,15,108)) fixed;
+}
+
 .welcome{
   margin-top: -100px;
   font-family: 'Poppins', sans-serif;
@@ -98,7 +108,6 @@ h4.dis span {
   height: 45px;
   width: 100%;
   border: none;
-  box-shadow: inset -10px -20px 10px 20px rgb(4, 15, 108) !important;
 }
 .infopane{
   width:350px;
