--- a/views/home2.html
+++ b/views/home2.html
@@ -6,37 +6,33 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta charset="utf-8" />
   <title>Coursework 3</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="lessons.js"></script>
-  <link rel="stylesheet" href="dist/css/bootstrap.min.css">
-  <link rel="manifest" href="lessonsApp.webmanifest" crossorigin="use-credentials">
+  <link rel="stylesheet" href="../style.css">
+  <script src="../lessons.js"></script>
+  <link rel="stylesheet" href="../dist/css/bootstrap.min.css">
+  <link rel="manifest" href="../lessonsApp.webmanifest" crossorigin="use-credentials">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <script>
-   if ('serviceWorker' in navigator) {
+   /*if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js');
-    };
+    };*/
   </script>
 </head>
 
 <body>
   <div id="lessons" class="pt-4">
-    <div class="h-75 w-100 mx-auto img-container"></div>
-      <div class="h-25 container-2">
-        <h6 class="text-white text-center welcome">Welcome To</h6>
-        <h5 class="text-danger text-center org text-nowrap">GRO ACADEMY</h5>
-        <div class="infopane px-4">
-          <p class="text-white">
-            The one-stop digital solution with engaging learning resources, 
-            lecture notes, mock tests, model answers, quizzes and video 
-            lectures, which will help students prepare better for 
-            competitive examinations any time and any where
-          </p>
-          <div class="d-grid gap-2">
-            <a href="./views/home2.html"class="btn btn-block btn-gro-danger">
-              Get Started
-            </a>
-          </div>
+    <div class="w-100 mx-auto img-container2 d-flex justify-content-center align-items-center py-4">
+        <img src="../img/bg2.png" alt="" class="info-img">
+    </div>
+        <div class="container2 w-100 d-flex justify-content-center align-items-center">
+            <div class="border rounded bg-white info-pane ">
+                <h6 class="text-center welcome-home2">Learn Anytime.</h6>
+                <h6 class="text-center welcome-home2">Anywhere</h6>
+                <p class="text-secondary text-center">Interactive Videos, Revision Notes, Past Examination questions and videos, Inclusive learning for special needs students, Monitor your performance</p>
+                <div class="w-100 d-flex justify-content-center align-items-center">
+                    <button type="button" class="btn rounded-pill btn-lg btn-gro-danger">Continue</button>
+                </div>
+            </div>
         </div>
       </div>
   </div>
