--- a/style.css
+++ b/style.css
@@ -80,22 +80,23 @@ h4.dis span {
 #lessons{
   height: 100vh;
   width:100%;
-  background-color: rgb(4, 15, 108);
-  position: absolute;
-  left: 0;
-  right: 0;
-  box-shadow: inset -10px -20px 10px 20px rgb(4, 15, 108) !important;
+  background-color: rgb(4, 15, 108);  
 }
 .img-container{
-  margin: auto;
+  box-shadow: inset -10px -40px 10px 20px rgb(4, 15, 108) !important;
   position: absolute;
-  left: 0;
-  right: 0;
-  background-image: url('./img/bg.png') no-repeat fixed center, linear-gradient(rgb(3, 12, 103), rgb(4,15,108)) fixed;
-
+  top:0;
+}
+.lesson{
+  height: 100vh;
+  width: 100%;
+  background-color: rgb(5, 13, 103);
+}
+.img-resize{
+  height: 480px;
 }
 .info-pane{
-  height:80%;
+  height:auto;
   width: 240px;
   border-radius: 48px;
 }
