--- a/views/home2.html
+++ b/views/home2.html
@@ -20,12 +20,12 @@
 </head>
 
 <body>
-  <div id="lessons" class="pt-4">
+  <div class="pt-4 lesson">
     <div class="w-100 mx-auto img-container2 d-flex justify-content-center align-items-center py-4">
         <img src="../img/bg2.png" alt="" class="info-img">
     </div>
         <div class="container2 w-100 d-flex justify-content-center align-items-center">
-            <div class="border rounded bg-white info-pane ">
+            <div class="border rounded bg-white info-pane py-3">
                 <h6 class="text-center welcome-home2">Learn Anytime.</h6>
                 <h6 class="text-center welcome-home2">Anywhere</h6>
                 <p class="text-secondary text-center">Interactive Videos, Revision Notes, Past Examination questions and videos, Inclusive learning for special needs students, Monitor your performance</p>
