--- a/views/home2.html
+++ b/views/home2.html
@@ -17,6 +17,11 @@
       navigator.serviceWorker.register('service-worker.js');
     };*/
   </script>
+  <style>
+    body{
+      overflow-y: hidden !important;
+    }
+  </style>
 </head>
 
 <body>
