--- a/views/home2.html
+++ b/views/home2.html
@@ -30,7 +30,7 @@
         <img src="../img/bg2.png" alt="" class="info-img">
     </div>
         <div class="container2 w-100 d-flex justify-content-center align-items-center">
-            <div class="border rounded bg-white info-pane py-3">
+            <div class="border bg-white info-pane py-3 px-1">
                 <h6 class="text-center welcome-home2">Learn Anytime.</h6>
                 <h6 class="text-center welcome-home2">Anywhere</h6>
                 <p class="text-secondary text-center">Interactive Videos, Revision Notes, Past Examination questions and videos, Inclusive learning for special needs students, Monitor your performance</p>
@@ -38,6 +38,11 @@
                     <button type="button" class="btn rounded-pill btn-lg btn-gro-danger">Continue</button>
                 </div>
             </div>
+
+
+            <div class="border bg-secondary infopane2 py-3 px-1">
+              
+          </div>
         </div>
       </div>
   </div>
