--- a/views/home2.html
+++ b/views/home2.html
@@ -25,7 +25,12 @@
 </head>
 
 <body>
-  <div class="pt-4 lesson">
+  <div class="pt-3 lesson">
+    <div class="w-25 mx-auto py-2 px-5">
+      <label for="" class="float-end text-white">
+        <a href="#" class="float-end text-white text-decoration-none">SKIP <i class="fa-solid fa-arrow-right-long"></i></a>
+      </label> 
+    </div>
     <div class="w-100 mx-auto img-container2 d-flex justify-content-center align-items-center py-4">
         <img src="../img/bg2.png" alt="" class="info-img">
     </div>
@@ -35,20 +40,16 @@
                 <h6 class="text-center welcome-home2">Anywhere</h6>
                 <p class="text-secondary text-center">Interactive Videos, Revision Notes, Past Examination questions and videos, Inclusive learning for special needs students, Monitor your performance</p>
                 <div class="w-100 d-flex justify-content-center align-items-center">
-                    <button type="button" class="btn rounded-pill btn-lg btn-gro-danger">Continue</button>
+                    <button type="button" class="btn rounded-pill btn-sm py-2 px-4 btn-gro-danger">Next</button>
                 </div>
             </div>
-
-
-            <div class="border bg-secondary infopane2 py-3 px-1">
-              
-          </div>
         </div>
       </div>
   </div>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="https://kit.fontawesome.com/2784015338.js" crossorigin="anonymous"></script>
 <script>
 
   new Vue({
