--- a/style.css
+++ b/style.css
@@ -99,6 +99,11 @@ h4.dis span {
   height:auto;
   width: 240px;
   border-radius: 30px;
+  margin-top: 30px;
+}
+.info-img {
+  height:200px;
+  width:200px;
 }
 .infopane2{
   width: 40px !important;
