--- a/views/home2.html
+++ b/views/home2.html
@@ -28,7 +28,7 @@
   <div class="pt-3 lesson">
     <div class="w-100 w-lg-25 mx-auto border py-2 px-5">
       <label for="" class="text-white">
-        <a href="#" class="text-white text-decoration-none"><i class="fa-solid fa-arrow-right-long"></i></a>
+        <a href="#" class="text-white float-end text-decoration-none">SKIP<i class="fa-solid fa-arrow-right-long"></i></a>
       </label> 
     </div>
     <div class="w-100 mx-auto img-container2 d-flex justify-content-center align-items-center py-4">
