--- a/views/home2.html
+++ b/views/home2.html
@@ -26,10 +26,10 @@
 
 <body>
   <div class="pt-3 lesson">
-    <div class="w-100 w-lg-25 mx-auto border py-2 px-2">
-      <label for="" class="text-white">
-        <a href="#" class="text-white float-end text-decoration-none">SKIP<i class="fa-solid fa-arrow-right-long"></i></a>
-      </label> 
+    <div class="w-100 mx-auto border py-2 px-2 h-auto">
+      
+        <a href="#" class="text-white text-decoration-none float-end">SKIP <i class="fa-solid fa-arrow-right-long"></i></a>
+      
     </div>
     <div class="w-100 mx-auto img-container2 d-flex justify-content-center align-items-center py-4">
         <img src="../img/bg2.png" alt="" class="info-img">
