--- a/views/home2.html
+++ b/views/home2.html
@@ -26,7 +26,7 @@
 
 <body>
   <div class="pt-3 lesson">
-    <div class="w-100 mx-auto border py-2 px-2 h-auto">
+    <div class="w-100 mx-auto py-2 px-2 h-auto">
       
         <a href="#" class="text-white text-decoration-none float-end">SKIP <i class="fa-solid fa-arrow-right-long"></i></a>
       
