added new files

--- a/views/home3.html
+++ b/views/home3.html
@@ -30,15 +30,16 @@
       <a href="#" class="text-white text-decoration-none float-end">SKIP <i class="fa-solid fa-arrow-right-long"></i></a> 
     </div>
     <div class="w-100 mx-auto img-container2 d-flex justify-content-center align-items-center py-4">
-        <img src="../img/bg2.png" alt="" class="info-img">
+        <img src="../img/bg3.png" alt="" class="info-img">
     </div>
         <div class="container2 w-100 d-flex justify-content-center align-items-center">
             <div class="border bg-white info-pane py-3 px-1">
-                <h6 class="text-center welcome-home2">Learn Anytime.</h6>
-                <h6 class="text-center welcome-home2">Anywhere</h6>
-                <p class="text-secondary text-center">Interactive Videos, Revision Notes, Past Examination questions and videos, Inclusive learning for special needs students, Monitor your performance</p>
+                <h6 class="text-center welcome-home2">Personalized Coaching</h6>
+                <p class="text-secondary text-center">
+                    Need help in a particular subject?  Register for our 1-on-1 Coaching
+                </p>
                 <div class="w-100 d-flex justify-content-center align-items-center">
-                    <a href="./home3.html" type="button" class="btn rounded-pill btn-sm py-2 px-4 btn-gro-danger">Next</a>
+                    <a href="./home4.html" type="button" class="btn rounded-pill btn-sm py-2 px-4 btn-gro-danger">Next</a>
                 </div>
             </div>
         </div>
