--- a/views/home4.html
+++ b/views/home4.html
@@ -34,9 +34,8 @@
     </div>
         <div class="container2 w-100 d-flex justify-content-center align-items-center">
             <div class="border bg-white info-pane py-3 px-1">
-                <h6 class="text-center welcome-home2">Learn Anytime.</h6>
-                <h6 class="text-center welcome-home2">Anywhere</h6>
-                <p class="text-secondary text-center">Interactive Videos, Revision Notes, Past Examination questions and videos, Inclusive learning for special needs students, Monitor your performance</p>
+                <h6 class="text-center welcome-home2">Ace your exams in one sitting</h6>
+                <p class="text-secondary text-center">Nigeria’s best learning app for examination and online preparation</p>
                 <div class="w-100 d-flex justify-content-center align-items-center">
                     <a href="./home3.html" type="button" class="btn rounded-pill btn-sm py-2 px-4 btn-gro-danger">Next</a>
                 </div>
