--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ h4.dis span {
   height: 480px;
 }
 .info-pane{
-  height:auto;
+  height:270px;
   width: 240px;
   border-radius: 30px;
   margin-top: 30px;
