--- a/views/home2.html
+++ b/views/home2.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <div class="pt-3 lesson">
+  <div id="lessons" class="pt-3 lesson">
     <div class="w-100 mx-auto py-2 px-3 h-auto">
       <a href="#" class="text-white text-decoration-none float-end">SKIP <i class="fa-solid fa-arrow-right-long"></i></a> 
     </div>
@@ -37,7 +37,12 @@
                 <h6 class="text-center welcome-home2">Learn Anytime.</h6>
                 <h6 class="text-center welcome-home2">Anywhere</h6>
                 <p class="text-secondary text-center">Interactive Videos, Revision Notes, Past Examination questions and videos, Inclusive learning for special needs students, Monitor your performance</p>
-                <div class="w-100 d-flex justify-content-center align-items-center">
+                <ol class="slider-indicator d-flex justify-content-center align-items-center mt-4">
+                  <li class="active"></li>
+                  <li></li>
+                  <li></li>
+                </ol>
+                <div class="w-100 d-flex justify-content-center align-items-center btn-holder">
                     <a href="./home3.html" type="button" class="btn rounded-pill btn-sm py-2 px-4 btn-gro-danger">Next</a>
                 </div>
             </div>
