--- a/views/home3.html
+++ b/views/home3.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <div class="pt-3 lesson">
+  <div id="lessons" class="pt-3 lesson">
     <div class="w-100 mx-auto py-2 px-3 h-auto">
       <a href="#" class="text-white text-decoration-none float-end">SKIP <i class="fa-solid fa-arrow-right-long"></i></a> 
     </div>
@@ -38,7 +38,12 @@
                 <p class="text-secondary text-center">
                     Need help in a particular subject?  Register for our 1-on-1 Coaching
                 </p>
-                <div class="w-100 d-flex justify-content-center align-items-center">
+                <ol class="slider-indicator d-flex justify-content-center align-items-center">
+                  <li></li>
+                  <li class="active"></li>
+                  <li></li>
+                </ol>
+                <div class="w-100 d-flex justify-content-center align-items-center btn-holder">
                     <a href="./home4.html" type="button" class="btn rounded-pill btn-sm py-2 px-4 btn-gro-danger">Next</a>
                 </div>
             </div>
