--- a/views/home4.html
+++ b/views/home4.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <div class="pt-3 lesson">
+  <div id="lessons" class="pt-3 lesson">
     <div class="w-100 mx-auto py-2 px-3 h-auto">
       <a href="#" class="text-white text-decoration-none float-end">SKIP <i class="fa-solid fa-arrow-right-long"></i></a> 
     </div>
@@ -36,8 +36,13 @@
             <div class="border bg-white info-pane py-3 px-1">
                 <h6 class="text-center welcome-home2">Ace your exams in one sitting</h6>
                 <p class="text-secondary text-center">Nigeria’s best learning app for examination and online preparation</p>
-                <div class="w-100 d-flex justify-content-center align-items-center">
-                    <a href="./home3.html" type="button" class="btn rounded-pill btn-sm py-2 px-4 btn-gro-danger">Next</a>
+                <ol class="slider-indicator d-flex justify-content-center align-items-center">
+                  <li></li>
+                  <li></li>
+                  <li class="active"></li>
+                </ol>
+                <div class="w-100 d-flex justify-content-center align-items-center btn-holder">
+                    <a href="./auth/login.html" type="button" class="btn rounded-pill btn-sm py-2 px-4 btn-gro-danger">Next</a>
                 </div>
             </div>
         </div>
