--- a/views/auth/login.html
+++ b/views/auth/login.html
@@ -45,7 +45,7 @@
     <div class="w-100 mx-auto img-container2 d-flex justify-content-center align-items-center py-4">
       <img src="../../img/authbg.png" alt="" class="img-resize">
     </div>
-    <div class="form-holder px-3 pt-4">
+    <div class="form-holder w-100 px-3 pt-4">
         <form class="px-3">
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
