--- a/views/auth/login.html
+++ b/views/auth/login.html
@@ -19,7 +19,8 @@
   </script>
   <style>
     body{
-      overflow: hidden !important;
+      overflow-x: hidden !important;
+      overflow-y: hidden !important;
     }
     .btn-primary{
       background-color: #051276 !important;
