--- a/views/auth/login.html
+++ b/views/auth/login.html
@@ -19,8 +19,7 @@
   </script>
   <style>
     body{
-      overflow-x: hidden !important;
-      overflow-y: hidden !important;
+      overflow: hidden !important;
     }
     .btn-primary{
       background-color: #051276 !important;
