--- a/views/auth/login.html
+++ b/views/auth/login.html
@@ -18,8 +18,8 @@
     };*/
   </script>
   <style>
-    body{
-      overflow: hidden !important;
+    body {
+      overflow-y: hidden !important;
     }
     .btn-primary{
       background-color: #051276 !important;
